<resources>
    <string name="app_name">Covid19 Tracker</string>
    <string name="label_last_updated">Last Updated</string>
    <string name="sample_update_time">Updated 2h ago</string>
    <string name="label_confirmed">TOTAL</string>
    <string name="label_recovered">RECOVERED</string>
    <string name="label_deceased">DEATHS</string>
    <string name="country">COUNTRY</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string-array name="filters">
        <item>None</item>
        <item><![CDATA[>=]]></item>
        <item><![CDATA[<=]]></item>
    </string-array>
</resources>
