<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_state"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="0dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:weightSum="4">

        <TextView
            android:id="@+id/country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="8dp"
            android:text="@string/country"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:drawableEnd="@drawable/ic_up"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/label_confirmed"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/deaths"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:drawableEnd="@drawable/ic_up"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/label_recovered"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/recovered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:drawableEnd="@drawable/ic_up"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/label_deceased"
            android:textColor="@color/black" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>