<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/total_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:id="@+id/total"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/label_confirmed"
            android:textColor="?android:textColorPrimary" />


        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/total_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="1.5"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/customTitle" />

        <EditText
            android:id="@+id/total_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:inputType="number"
            android:textColor="?android:textColorPrimary"
            tools:ignore="Autofill,HardcodedText,LabelFor" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/recovered_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:id="@+id/recovered"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/label_recovered"
            android:textColor="?android:textColorPrimary" />


        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/recovered_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="1.5"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/customTitle" />

        <EditText
            android:id="@+id/recovered_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:inputType="number"
            android:textColor="?android:textColorPrimary"
            tools:ignore="Autofill,HardcodedText,LabelFor" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/deaths_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:id="@+id/deaths"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/label_deceased"
            android:textColor="?android:textColorPrimary" />


        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/deaths_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="1.5"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/customTitle" />

        <EditText
            android:id="@+id/deaths_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:inputType="number"
            android:textColor="?android:textColorPrimary"
            tools:ignore="Autofill,HardcodedText,LabelFor" />

    </LinearLayout>

</LinearLayout>
