<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/redBg"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toStartOf="@+id/card_recovered"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/redBg"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_confirmed_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pt_sans_bold"
                android:text="@string/label_confirmed"
                android:textColor="@color/red"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_confirmed_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="2022" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_recovered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/greenBg"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toStartOf="@+id/card_death"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card_total"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/greenBg"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_recovered_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pt_sans_bold"
                android:text="@string/label_recovered"
                android:textColor="@color/green"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_recovered_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="2022" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_death"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/grayBg"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card_recovered"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grayBg"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_deceased_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pt_sans_bold"
                android:text="@string/label_deceased"
                android:textColor="@color/gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_deceased_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="2022" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/last_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toTopOf="@id/header"
        app:layout_constraintEnd_toStartOf="@+id/applied_filters"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_death"
        tools:text="@string/label_last_updated" />

    <TextView
        android:id="@+id/applied_filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toTopOf="@id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/last_updated"
        app:layout_constraintTop_toBottomOf="@id/card_death"
        tools:text="@string/filter" />

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_recovered">

        <TextView
            android:id="@+id/country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="8dp"
            android:text="@string/country"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:drawableEnd="@drawable/ic_up"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/label_confirmed"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/deaths"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:drawableEnd="@drawable/ic_up"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/label_recovered"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/recovered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:drawableEnd="@drawable/ic_up"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/label_deceased"
            android:textColor="@color/black" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/country_list"
        app:layout_constraintEnd_toEndOf="@id/country_list"
        app:layout_constraintStart_toStartOf="@id/country_list"
        app:layout_constraintTop_toTopOf="@id/country_list" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/country_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

</androidx.constraintlayout.widget.ConstraintLayout>